[gd_scene load_steps=2 format=2]

[ext_resource path="res://http_check_if_beat_highscore.gd" type="Script" id=1]

[node name="httpEditHihscore" type="Node2D"]
script = ExtResource( 1 )

[node name="HTTPRequestGet" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequestGet" to="." method="_on_HTTPRequestGet_request_completed"]
